@@ -1,7 +1,8 @@
 1.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Move towards replacing the XMLRPC API with JSON to make our requests
+  cacheable. Also reduces the amount of requests needed dramatically.
 
 
 1.3 (2014-02-16)
